--- a/roles/kube-master/templates/aggregator-proxy-csr.json.j2
+++ b/roles/kube-master/templates/aggregator-proxy-csr.json.j2
@@ -8,8 +8,8 @@
   "names": [
     {
       "C": "CN",
-      "ST": "HangZhou",
-      "L": "XS",
+      "ST": "Shenzhen",
+      "L": "GS",
       "O": "k8s",
       "OU": "System"
     }
