--- a/roles/kube-node/templates/kubelet-csr.json.j2
+++ b/roles/kube-node/templates/kubelet-csr.json.j2
@@ -11,8 +11,8 @@
   "names": [
     {
       "C": "CN",
-      "ST": "HangZhou",
-      "L": "XS",
+      "ST": "Shenzhen",
+      "L": "GS",
       "O": "system:nodes",
       "OU": "System"
     }
