--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -1,5 +1,8 @@
 {
-  "registry-mirrors": ["{{ REG_MIRROR_1 }}"],
+  "registry-mirrors": [
+    "https://docker.mirrors.ustc.edu.cn",
+    "http://hub-mirror.c.163.com"
+  ],
   "max-concurrent-downloads": 10,
   "log-driver": "{{ LOG_DRIVER }}",
   "log-level": "{{ LOG_LEVEL }}",
@@ -8,9 +11,7 @@
     "max-file": "{{ LOG_MAX_FILE }}"
     },
   "data-root": "{{ STORAGE_DIR }}"
-
   {% if ENABLE_REMOTE_API %}
   , "hosts": ["tcp://0.0.0.0:2376", "unix:///var/run/docker.sock"]
   {% endif %}
-
 }
