To optimize the lb -> ex-lb process

--- a/roles/ex-lb/templates/keepalived-backup.conf.j2
+++ b/roles/ex-lb/templates/keepalived-backup.conf.j2
@@ -13,7 +13,7 @@ vrrp_instance VI-kube-master {
     priority {{ 119 | random(61, 1) }}
     unicast_src_ip {{ inventory_hostname }}
     unicast_peer {
-{% for h in groups['lb'] %}{% if h != inventory_hostname %}
+{% for h in groups['ex-lb'] %}{% if h != inventory_hostname %}
         {{ h }}
 {% endif %}{% endfor %}
     }
@@ -25,6 +25,6 @@ vrrp_instance VI-kube-master {
         check-haproxy
     }
     virtual_ipaddress {
-        {{ MASTER_IP }}
+        {{ EX_APISERVER_VIP }}
     }
 }
